# moneta

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
benches/: rendering.rs
docker/web/: Dockerfile
migrations/2020-05-15-193544_create_users/: up.sql
migrations/2020-05-16-114018_create_accounts/: down.sql  up.sql
migrations/2020-05-16-114024_create_categories/: up.sql
migrations/2020-05-16-140245_create_balances/: up.sql
migrations/2020-05-16-140252_create_category_replacements/: down.sql  up.sql
migrations/2020-05-16-140259_create_account_synchronizations/: down.sql  up.sql
migrations/2020-05-19-200845_create_expenses/: up.sql
migrations/2020-05-19-200854_create_expense_transactions/: down.sql  up.sql
migrations/2020-05-19-202658_create_expense_events/: down.sql  up.sql
migrations/2020-05-19-202704_create_expense_categories/: down.sql  up.sql
migrations/2020-05-19-202715_create_expense_receipts/: down.sql  up.sql
migrations/2020-05-21-103126_create_delivery_rules/: down.sql  up.sql
package/: moneta-backup.service  moneta-backup.timer  moneta.service  sysusers.d
package/arch/: PKGBUILD  moneta.install  package.sh
package/ubuntu/: backup.sh  deb-control.txt  deb-postinst.sh  deb-preinst.sh  deb-prerm.sh  package.sh
src/: enums.rs  lib.rs  models.rs  queries.rs  rendering.rs  schema.patch  schema.rs  serialization.rs
src/cli/: import.rs  mod.rs  serve.rs  user.rs
src/web/: accounts.rs  balances.rs  categories.rs  expenses.rs  mod.rs  pagination.rs  user.rs  util.rs
web/: .eslintrc.json  .gitignore  package.json
(+36 files in other folders)
